; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_getchar.c_start_stuff.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_getchar.c_start_stuff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64, %struct.TYPE_5__, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32* }
%struct.TYPE_7__ = type { i64, %struct.TYPE_6__, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32* }

@readbuf1 = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@readbuf2 = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @start_stuff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_stuff() #0 {
  %1 = load i32*, i32** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @readbuf1, i32 0, i32 1, i32 0), align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  store %struct.TYPE_5__* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @readbuf1, i32 0, i32 1), %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @readbuf1, i32 0, i32 2), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @readbuf1, i32 0, i32 0), align 8
  br label %4

4:                                                ; preds = %3, %0
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @readbuf2, i32 0, i32 1, i32 0), align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  store %struct.TYPE_6__* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @readbuf2, i32 0, i32 1), %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @readbuf2, i32 0, i32 2), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @readbuf2, i32 0, i32 0), align 8
  br label %8

8:                                                ; preds = %7, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
